@startuml
entity User {
  *id : number
  --
  *email: string
  *password: string
  *roles: array<string>
  *created_at: Date
}

entity "Category" as c01 {
  *id: number
  --
  *name: string
  *url: string
  *sub_categories: array<SubCategory>
}

entity "SubCategory" as sc02 {
  *id:number
  --
  *name: string
  *url: string
  *categories: array<Category>
  *tools: array<Tool>
}

entity "Tool" as t03 {
  *id: number
  --
  *name: string
  *url: string
  *sub_categories: array<SubCategory>
  *short_description: string
  *description: text
  affiliate_ref: string
  code_promo: string
  img_url: string
}

c01 }o..o{  sc02
sc02 }o..o{  t03
@enduml